package Model;

public interface Component {
}
