package Model;

public class MassComponent {
    protected double mass;
}
