package Model;

public class NameComponent {
    protected String name;
}
