package Model;

public class PositionComponent {
    protected double x;
    protected double y;
    protected double z;
}
