package Model;

public interface System {
}
