package Model;

public class VelocityComponent {
    protected double vx;
    protected double vy;
    protected double vz;
}
